Edit index, Edit style, Add images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body id="indexBody">
 
-    <h1>Odin Recipes<span><img id="fork" src="/images/fork2.png"</span></h1>
+    <h1>Odin Recipes<span><img id="fork" src="/images/fork2.png"></span></h1>
 
     <div id="banner">
         <p id="banner-top-text">Odin's <span id="banner-yellow-text">#1 Trusted Recipe Resourse</span> since 2023</p>
@@ -18,11 +18,29 @@
             <span class="circle" id="yellow-circle"></span><b>1</b> Home Cooks
         </p>
     </div>
-    <ul id="index-ul">
-        <li><a href="recipes/buldak.html">Buldak</a></li>
-        <li><a href="recipes/haejangguk.html">Haejang-guk</a></li>
-        <li><a href="recipes/bulgogi.html">Bulgogi</a></li>
-    </ul>
+
+    <div id="image-trending">
+        <img id="babish-img" src="/images/babish.jpeg">
+        <span>
+            <div id="trending">
+                <h3>News & Trending</h3> 
+                <div class="tending-item">
+                    <img class="small-img" src="/images/buldak2.jpg">
+                    <span class="link-next-to-img"><a href="recipes/buldak.html">Fire Chicken with Cheese<br>(Cheese buldak: 치즈불닭)</a></span>
+                </div>
+                <div class="trending-item">
+                    <img class="small-img" src="/images/haejangguk2.jpg">
+                    <span class="link-next-to-img"><a href="recipes/haejangguk.html">Korean Hangover Soup</a></span>
+                </div>
+                <div class="tending-item">
+                    <img class="small-img" src="/images/bulgogi2.jpg">
+                    <span class="link-next-to-img"><a href="recipes/bulgogi.html">Bulgogi</a></span>
+                    </div>
+            </div>
+
+        </span>
+    </div>
+    
 
     
 </body>
