--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 </div>
                 <div class="trending-item">
                     <img class="small-img" src="/images/haejangguk2.jpg">
-                    <span class="link-next-to-img"><a href="recipes/haejangguk.html">Korean Hangover Soup</a></span>
+                    <span class="link-next-to-img"><a href="recipes/haejangguk.html">Hangover Soup<br>(Haejang-guk: 해장국)</a></span>
                 </div>
                 <div class="tending-item">
                     <img class="small-img" src="/images/bulgogi2.jpg">
-                    <span class="link-next-to-img"><a href="recipes/bulgogi.html">Bulgogi</a></span>
+                    <span class="link-next-to-img"><a href="recipes/bulgogi.html">Grilled Beef<br>(Bulgogi: 불고기)</a></span>
                     </div>
             </div>
 
