--- a/recipes/buldak.html
+++ b/recipes/buldak.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
     <link rel="stylesheet" type="text/css" href="../style.css"/>
-
 </head>
 <body>
     <a href="../index.html">Home</a>
     <h1>Buldak</h1>
-    <img class="images" src="../images/Buldak-Recipe.jpg">
+    <img class="food-image" src="../images/Buldak-Recipe.jpg">
     <h3>This buldak recipe is a popular Korean street food made with chicken cooked in a fiery gochujang sauce, often topped with melty cheese, easy to make!</h3>
     <p>Buldak (불닭) or fire chicken is a heavily spiced, barbecued chicken dish. The literal meaning of the name is "fire chicken", where bul means "fire" and dak translates to "chicken."</p>
     <h4>Ingredients</h4>
