--- a/recipes/bulgogi.html
+++ b/recipes/bulgogi.html
@@ -9,7 +9,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Bulgogi</h1>
-    <img src="../images/bulgogi.jpg">
+    <img class="food-image" src="../images/bulgogi.jpg">
     <h3>Bulgogi(불고기) or "Fire Meat" is a Korean grilled dish made of thin, marinated slices of meat, most commonly beef.</h3>
     <p>Undoubtedly it is one of the most well-known Korean traditional foods and it has been around for thousands of years. Naturally, the cooking method of bulgogi evolved over time and it varies by region too.
 
