--- a/recipes/haejangguk.html
+++ b/recipes/haejangguk.html
@@ -9,7 +9,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Haejang-guk</h1>
-    <img src="../images/haejangguk.jpg">
+    <img class="food-image" src="../images/haejangguk.jpg">
     <h3>Haejang-guk(해장국) or hangover soup refers to every kind of guk or soup eaten as a hangover cure in Korean cuisine.</h3>
     <p>Today I’m going to introduce you to ppyeo-haejangguk, or ox bone hangover soup. This soup is made from boiling ox bones for hours and hours until all the delicious, nutritious meat, marrow, and ligaments dissolve and create a hearty bone broth. The resulting soup is rich, savory, earthy, and best of all, after one spoonful I can feel my lips stick together from the collagen. I think: “Wow this is good for my body,” which makes me enjoy it even more. That means it’s well made!</p>
     <h4>Ingredients</h4>
