Edit index - Change image src path

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             <div id="trending">
                 <h3>News & Trending</h3> 
                 <div class="tending-item">
-                    <img class="small-img" src="/images/buldak2.jpg">
+                    <img class="small-img" src="images\buldak2.jpg">
                     <span class="link-next-to-img"><a href="recipes/buldak.html">Fire Chicken with Cheese<br>(Cheese buldak: 치즈불닭)</a></span>
                 </div>
                 <div class="trending-item">
-                    <img class="small-img" src="/images/haejangguk2.jpg">
+                    <img class="small-img" src="images\haejangguk2.jpg">
                     <span class="link-next-to-img"><a href="recipes/haejangguk.html">Hangover Soup<br>(Haejang-guk: 해장국)</a></span>
                 </div>
                 <div class="tending-item">
-                    <img class="small-img" src="/images/bulgogi2.jpg">
+                    <img class="small-img" src="images\bulgogi2.jpg">
                     <span class="link-next-to-img"><a href="recipes/bulgogi.html">Grilled Beef<br>(Bulgogi: 불고기)</a></span>
                     </div>
             </div>
