Edit Index - forgot one image path

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div id="image-trending">
-        <img id="babish-img" src="/images/babish.jpeg">
+        <img id="babish-img" src="images\babish.jpeg">
         <span>
             <div id="trending">
                 <h3>News & Trending</h3> 
