Edit index - another image path

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body id="indexBody">
 
-    <h1>Odin Recipes<span><img id="fork" src="/images/fork2.png"></span></h1>
+    <h1>Odin Recipes<span><img id="fork" src="images\fork2.png"></span></h1>
 
     <div id="banner">
         <p id="banner-top-text">Odin's <span id="banner-yellow-text">#1 Trusted Recipe Resourse</span> since 2023</p>
